Changes from another Zoetrope copy. Multiple features added.
Some features:
- Support for html report
- Support for email report
- Screenshot handling
- Output handling
- Build fail detection

Authors:
- Oddbjørn Håland
- Hallvard Nygård (commiter)

--- a/readme
+++ b/readme
@@ -1,3 +1,6 @@
-Found on https://launchpad.net/selenium-zoetrope under GNU LGPL v3
+Based on https://launchpad.net/selenium-zoetrope under GNU LGPL v3.
 
-Extended with support for running the whole thing over SSH on a remote machine.
+- Screenshots
+- Video recording
+- HTML report
+- Mail report
